<resources>
    <string name="app_name">The Sellsmart</string>
    <string name="perfect_electronics">Perfect Electronics</string>
    <string name="your_place">Your Place</string>
    <string name="already_have_an_account_log_in">Already have an Account? Log in</string>
    <string name="or">----------OR----------</string>
    <string name="join_now">JOIN NOW</string>
    <string name="todo">TODO</string>
    <string name="title_activity_auth_verification">auth_verification</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">All Categories</string>
    <string name="menu_products">All Products</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_product">My Product</string>
    <string name="menu_my_coupons">My Coupons</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_my_wish_list">My Wishlist</string>
    <string name="menu_my_notificatios">My Notificatios</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_sell_on_sellsmart">Sell on SellSmart</string>
    <string name="menu_addproduct">Add Products</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
