<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.perfectelectronics.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.perfectelectronics.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.perfectelectronics.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />



    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.perfectelectronics.ui.orders.OrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.perfectelectronics.ui.cart.CartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_my_wish_list"
        android:name="com.example.perfectelectronics.ui.wishlist.WishlistFragment"
        android:label="@string/menu_my_wish_list"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/nav_my_notificatios"
        android:name="com.example.perfectelectronics.ui.notifications.NotificationsFragment"
        android:label="@string/menu_my_notificatios"
        tools:layout="@layout/fragment_notificatios" />
    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.perfectelectronics.ui.profile.ProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_sell_on_sellsmart"
        android:name="com.example.perfectelectronics.ui.sellonsellsmart.SellOnSellSmartFragment"
        android:label="@string/menu_sell_on_sellsmart"
        tools:layout="@layout/fragment_sellonsellsmart" />
    <fragment
        android:id="@+id/nav_myproduct"
        android:name="com.example.perfectelectronics.ui.myproduct.MyproductFragment"
        android:label="@string/menu_my_product"
        tools:layout="@layout/fragment_myproduct" />
    <fragment
        android:id="@+id/nav_addproduct"
        android:name="com.example.perfectelectronics.ui.addproduct.AddproductFragment"
        android:label="@string/menu_addproduct"
        tools:layout="@layout/fragment_addproduct" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.perfectelectronics.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>