<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:textAlignment="center"
    android:textDirection="rtl"
    tools:context=".MainActivity">


  <TextView
      android:id="@+id/app_heading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:fontFamily="@font/coda"
      android:gravity="center"
      android:text="SellSmart"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@android:color/black"
      android:textDirection="rtl"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1" />

  <TextView
      android:id="@+id/app_heading1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/app_heading"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:fontFamily="@font/coda"
      android:gravity="center"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:text="The"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@android:color/background_dark"
      android:textDirection="rtl"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.06" />

  <Button
      android:id="@+id/main_already_login_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignWithParentIfMissing="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:background="@drawable/buttons"
      android:fontFamily="@font/coda"
      android:gravity="center"
      android:paddingLeft="30dp"
      android:paddingTop="5dp"
      android:paddingRight="30dp"
      android:paddingBottom="5dp"
      android:text="@string/already_have_an_account_log_in"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.881" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:fontFamily="@font/coda"
      android:gravity="center"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:text="@string/or"
      android:textAlignment="center"
      android:textColor="@android:color/darker_gray"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.796" />

  <Button
      android:id="@+id/main_join_now_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignWithParentIfMissing="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:background="@drawable/buttons"
      android:fontFamily="@font/coda"
      android:gravity="center"
      android:paddingLeft="50dp"
      android:paddingTop="5dp"
      android:paddingRight="50dp"
      android:paddingBottom="5dp"
      android:text="@string/join_now"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.72" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:contentDescription="@string/todo"
      android:textAlignment="center"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.397"
      app:srcCompat="@drawable/samji_illustrator"
      tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>